# PersonaGraph

./: .gitignore  create_edges.py  create_node_embeddings.py  pyproject.toml
configs/: classification.yaml  nli.yaml
notebooks/: persona_labels_exploration.ipynb  persona_labels_nli.ipynb
scripts/graph/: build_graph.py  create_dataset.py  create_edges.py  create_node_embeddings.py  create_nodes.py  label_nodes.py  ogbn_test.py
scripts/training/: create_dataset.py  evaluate.py  plain_train.py  train.py
src/: persona_graph.py
