[tool.poetry]
name = "persona-graph"
version = "0.1.0"
description = ""
authors = ["Konstantin Zaitsev <konstantzts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.3"
transformers = "^4.42.4"
torch = "^2.3.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
