[tool.poetry]
name = "persona-graph"
version = "0.1.0"
description = ""
authors = ["Konstantin Zaitsev <konstantzts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.42.4"
torch = "^2.3.1"
pandas = "^2.2.2"
evaluate = "^0.4.2"
accelerate = "^0.33.0"
scikit-learn = "^1.5.1"
fsspec = "2023.6.0"
datasets = "2.10.1"
networkx = "3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
